# GoCar

./: .gitignore  .gitmodules  GoCar_Simulation_Launcher.desktop  readme.md
rosbags/: control_driving_test.bag  control_steering.bag  slam_speed_speed_20.bag  slam_speed_speed_25.bag  slam_speed_speed_30.bag  slam_speed_speed_35.bag  slam_speed_speed_40.bag  speed_control_steps.bag
src/go_car/: CMakeLists.txt  package.xml
src/go_car_bringup/: CMakeLists.txt  package.xml
src/go_car_bringup/config/: sensors_visualization.rviz  sensors_visualization_3d.rviz  speed_steering_control_plots.xml
src/go_car_bringup/launch/: open_plotjugger.launch  open_rviz.launch  postload.launch  start_simulation.launch
src/go_car_bringup/scripts/: delay_execution.sh  setup_env.sh
src/go_car_control/: CMakeLists.txt  package.xml
src/go_car_control/config/: gazebo_joints_controllers_params.yaml
src/go_car_control/include/: ackermann_control_plugin.hpp
src/go_car_control/launch/: load_ackermann_control_plugin.launch  load_gazebo_joints_controllers.launch
src/go_car_control/src/: ackermann_control_plugin.cpp
src/go_car_debug_telemetry/: CMakeLists.txt  package.xml
src/go_car_debug_telemetry/src/: debug_telemetry_node.cpp
src/go_car_description/: CMakeLists.txt  package.xml
src/go_car_description/launch/: model_rviz_visualization.launch
src/go_car_description/meshes/: parser_lines_remover.py
src/go_car_description/rviz/: visualize_model_config.rviz
src/go_car_description/urdf/: go_car.urdf.xacro  go_car_model.xacro  left_camera.gazebo  right_camera.gazebo  simulation_model.gazebo
src/go_car_description/urdf/include/: gazebo.xacro  links.xacro  params.xacro  sensors.xacro  snippets.xacro
src/go_car_description/urdf/sensors/: back_camera.gazebo  front_camera.gazebo  front_laser_points.gazebo  velodyne_points.gazebo
src/go_car_gazebo/: CMakeLists.txt  package.xml
src/go_car_gazebo/include/: ackermann_control_plugin.hpp
src/go_car_gazebo/launch/: load_gazebo.launch  load_gazebo_joints_controllers.launch  load_gazebo_simulation.launch
src/go_car_gazebo/maps/: 2d_scanned_map.pgm  2d_scanned_map.yaml  3d_cloud_point_map.pcd  3d_scanned_map.pcd  3d_scanned_point_cloud_map.yaml  preload_map.pgm
src/go_car_gazebo/models/new_apartment_block/: model.config  model.sdf
src/go_car_gazebo/models/new_apartment_block/materials/scripts/: concrete.material  new_apartment_facade.material
src/go_car_gazebo/models/old_apartment_block/: model.config  model.sdf
src/go_car_gazebo/models/old_apartment_block/materials/scripts/: old_apartment_facade.material
src/go_car_gazebo/models/roadmap_floor/: model.config  model.sdf
src/go_car_gazebo/models/roadmap_floor/materials/scripts/: roadmap_floor.material
src/go_car_gazebo/models/skycrapper/: model.config  model.sdf
src/go_car_gazebo/models/skycrapper/materials/scripts/: skycrapper.material
src/go_car_gazebo/msg/: car_joint_forces.msg
src/go_car_gazebo/src/: ackermann_control_plugin.cpp  ground_truth_tf_publisher.cpp
src/go_car_gazebo/worlds/: city.world  city_v1.world  city_v2.world  city_v3.world  empty.world
src/go_car_ground_truth/: CMakeLists.txt  package.xml
src/go_car_low_level_control/: CMakeLists.txt  package.xml
src/go_car_low_level_control/config/: gazebo_joints_controllers_params.yaml
src/go_car_low_level_control/include/: ackermann_control_plugin.hpp
src/go_car_low_level_control/launch/: load_gazebo_joints_controllers.launch
src/go_car_low_level_control/src/: ackermann_control_plugin.cpp
src/go_car_manual_control/: CMakeLists.txt  package.xml
src/go_car_manual_control/config/: gamepad_driver_params.yaml
src/go_car_manual_control/include/gamepad/: gamepad_controller_adapter_ros_wrapper.hpp  gamepad_driver.hpp
src/go_car_manual_control/include/keyboard/: keyboard_driver.hpp  keyboard_driver_ros_wrapper.hpp  keyboard_input_processor.hpp  keyboard_listener.hpp
src/go_car_manual_control/launch/: manual_control.launch
src/go_car_manual_control/msg/: car_control_command.msg
src/go_car_manual_control/src/gamepad/: gamepad_controller_adapter.cpp  gamepad_controller_adapter_ros_wrapper.cpp  gamepad_driver.cpp  gamepad_driver_ros_wrapper.cpp
src/go_car_manual_control/src/keyboard/: keyboard_driver.cpp  keyboard_driver_ros_wrapper.cpp  keyboard_input_processor.cpp  keyboard_listener.cpp
src/go_car_nav/: CMakeLists.txt  package.xml
src/go_car_nav/config/: base_global_planner_params.yaml  base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/go_car_nav/launch/: hdl_graph_slam.launch  move_base.launch
src/go_car_nav/src/: cmd_vel_to_cmd_car.cpp
src/go_car_odom/: CMakeLists.txt  package.xml
src/go_car_odom/src/: ground_truth_tf_publisher.cpp
src/go_car_slam/: CMakeLists.txt  package.xml
src/go_car_slam/launch/: hdl_graph_slam.launch
