<?xml version="1.0"?>
<package format="2">
  <name>go_car_debug_telemetry</name>
  <version>0.0.0</version>
  <description>
    The scope of this package is to provide an extension to ROS published telemetry, including ground_truth data and
  </description>

  <maintainer email="leon@todo.todo">leon</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
