<?xml version="1.0"?>
<package format="2">
  <name>go_car_gazebo</name>
  <version>0.0.0</version>
  <description>The go_car_gazebo package</description>

  <maintainer email="leon@todo.todo">leon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_resource_path="${prefix}/media"/>
  </export>
</package>
