<?xml version="1.0"?>
<package format="2">
  <name>go_car_low_level_control</name>
  <version>0.0.0</version>
  <description>Package grouping all control related files</description>

  <maintainer email="sl.doncel@pm.me">lion</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
