<?xml version="1.0"?>
<package format="2">
  <name>go_car_manual_control</name>
  <version>0.0.0</version>
  <description>The go_car_manual_control package</description>

  <maintainer email="leon@todo.todo">leon</maintainer>

  <license>GPLv3</license>

  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
