<?xml version="1.0"?>
<package format="2">
  <name>go_car_nav</name>
  <version>0.0.0</version>
  <description>The go_car_nav package</description>

  <maintainer email="leon@todo.todo">leon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>go_car_manual_control</depend>
  <exec_depend>hdl_graph_slam</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
